gcc/testsuite/rust/rustc/ui/extern/extern-types-distinct-types_dg.rs
#![feature(extern_types)]

extern "C" {
    type A;
    type B;
}

fn foo(r: &A) -> &B {
    r // { dg-error ".E0308." "" { target *-*-* } }
}

fn main() {}

